# fresh-buddy

./: .dockerignore  .env.example  .gitignore  Dockerfile.client  LICENSE  README.md  config.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: REVIEW.md  animation-spec.md  architecture.md  deployment.md  hardware.md  multi-agent-plan.md  setup.md  usage.md
scripts/: entrypoint.sh  install.sh  ps2-auction-check.sh  ps2-cron.sh
server/: Dockerfile
services/stt/: Dockerfile  server.py
services/tts/: Dockerfile  audio_utils.py  entrypoint.sh  requirements.txt  server.py
src/bmo/: __init__.py  config.py  main.py
src/bmo/ai/: __init__.py  llm_client.py  meeting.py  nemotron.py
src/bmo/audio/: __init__.py  stt.py  tts.py
src/bmo/face/: __init__.py  display.py  expressions.py  preview_server.py  renderer.py
tests/: test_ai.py  test_animation.py  test_audio.py  test_expressions_80s.py  test_face.py  test_integration.py  test_preview_server.py  test_tts_service.py
